plugin/styles/proton.less
// The ui-variables file is provided by base themes provided by Atom.
//
// See https://github.com/atom/atom-dark-ui/blob/master/styles/ui-variables.less
// for a full listing of what's available.
@import "ui-variables";

@font-face {
   font-family: "Hack";
   src: url("atom://proton-mode/fonts/Hack-Regular.ttf");
}
@font-face {
   font-family: "Hack";
   src: url("atom://proton-mode/fonts/Hack-Bold.ttf");
   font-weight: bold;
}
@font-face {
   font-family: "Hack";
   src: url("atom://proton-mode/fonts/Hack-Italic.ttf");
   font-style: italic, oblique;
}
@font-face {
   font-family: "Hack";
   src: url("atom://proton-mode/fonts/Hack-BoldItalic.ttf");
   font-weight: bold;
   font-style: italic, oblique;
}

.proton-which-key {
  font-size: 13px;
  font-family: Hack;
}

.proton-which-key .flex-container {
  height: 100px;
  padding: 0;
  margin: 0;
  margin-top: 5px;
  list-style: none;

  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: inline-flex;

  -webkit-flex-flow: column wrap;
}

.proton-which-key .flex-item {
    width: 300px;
}

.proton-which-key p {
  margin: 0;
  padding: 0;
}

.proton-which-key {
  .proton-key {
    color: @text-color-info;
  }
  .proton-key-category {
    color: @text-color-warning;
  }
  .proton-key-action {
    color: @text-color-success;
  }
  .proton-chain-key {
    color: @ui-site-color-1;
  }
  .proton-chain-category {
    color: @ui-site-color-4;
  }
  .proton-which-key-footer {
    padding: 0;
    padding-left: 5px;
    padding-right: 5px;
  }
}

.proton-modal-panel {
  font-family: Hack;
  font-size: 13px;
  max-height: 500px;
  overflow-y: scroll;
  margin: 20px 0;
  padding: 0px 12px;

  h2 {
    color: @text-color-success;
  }

  table {
    width: 100%;
  }

  tr {
    line-height: 20px;
  }

  .process-status {
    text-align: right;
    width: 45px;
  }

  .proton-status-ok {
    color: @text-color-success;
  }

  .proton-status-progress {
    color: @text-color-info;
  }

  .proton-status-package {
    color: @text-color-info;
  }

  .proton-status-package-count {
    color: @text-color-info;
  }
}

// other overrides
atom-panel.modal.tab-switcher {
  display: none !important;
}

.proton-mode {
  atom-pane-container {
    opacity: 0.5;
  }
  atom-panel-container {
    &.right, &.left {
      opacity: 0.5;
    }
  }
}

.proton-mode::shadow .cursor {
  border-color: red;
  border-width: 10px;
}

